# biofuse

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
biofuse/: __init__.py  _vcztools_compat.py  access_log.py  bed_client.py  bed_protocol.py  bed_worker.py  cli.py  encoder_client.py  encoder_host.py  encoder_ops.py  encoder_protocol.py  encoder_server.py  formats.py  fuse_adapter.py  passthrough_view.py  plink_client.py  plink_ops.py  plink_protocol.py  plink_server.py  plink_source.py  view.py
experiments/io-study/: .gitignore  README.md  analyze.py  build_fixture.py  operations.py  report.md  run.py
experiments/io-study/install/: install.py  registry.py
experiments/io-study/operations/: __init__.py  admixture.py  base.py  bedreader.py  boltlmm.py  flashpca2.py  gcta.py  king.py  plink.py  regenie.py
experiments/io-study/results/: metrics.csv  metrics_per_op.csv  run_meta.json  summary.csv
experiments/io-study/results/timelines/: admixture_k3.txt  bedreader_random_10.txt  bedreader_slice_variants_1k.txt  flashpca_pca.txt  king_kinship.txt  p19_freq_chr1_3.txt  (+8 more)
experiments/io-study/scripts/: bedreader_runner.py
fs_tests/: .gitignore  README.md  run.sh
fs_tests/harness/: __init__.py  __main__.py  bulk_data_runner.py  cli.py  fio_runner.py  fixtures.py  fsx_runner.py  lifecycle.py  liveness.py  mount.py  pjdfstest.py  posix.py  report.py  stress_ng_runner.py  tools.py  trace_summary.py
fs_tests/jobs/: fio-mmap-read.fio  fio-multithread.fio  fio-parallel-seq-read.fio  fio-rand-read.fio  fio-seq-read.fio  fio-static-stress.fio
fs_tests/tools/: fsx_readonly.c
specs/: vcztools_streaming_plink.md
tests/: conftest.py  helpers.py  test_access_log.py  test_bed_client.py  test_bed_protocol.py  test_bed_worker.py  test_bgen_apps.py  test_cli.py  test_encoder_client.py  test_encoder_host.py  test_encoder_ops.py  test_encoder_protocol.py  test_encoder_server.py  test_formats.py  test_fuse_adapter.py  test_mount.py  test_passthrough_view.py  test_plink_apps.py  test_plink_client.py  test_plink_ops.py  test_plink_protocol.py  test_plink_server.py  test_plink_source.py
