[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "biofuse"
description = "Read-only FUSE filesystem views over VCF Zarr data"
readme = "README.md"
license = "Apache-2.0"
authors = [
  {name = "sgkit Developers", email = "project@sgkit.dev"},
]
dependencies = [
  "click>=8.2.0",
  "pyfuse3>=3.4.0",
  "trio>=0.22",
  "vcztools@git+https://github.com/sgkit-dev/vcztools.git@main",
]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/sgkit-dev/biofuse"

[project.scripts]
biofuse = "biofuse.cli:biofuse_main"

[dependency-groups]
test = [
  "pytest",
  "pytest-cov",
  "pytest-trio",
  "pytest-xdist",
  "bio2zarr[tskit]",
  "msprime",
]

lint = [
  "ruff==0.15.1",
  "prek==0.3.3",
  "zizmor==1.24.1",
]

packaging = [
  "twine",
  "validate-pyproject[all]",
]

dev = [
  {include-group = "test"},
  {include-group = "lint"},
  {include-group = "packaging"},
]

[tool.setuptools]
packages = ["biofuse"]

[tool.pytest.ini_options]
addopts = "-n auto"
testpaths = ["tests"]
trio_mode = true

[tool.setuptools_scm]
write_to = "biofuse/_version.py"
local_scheme = "no-local-version"

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT", "PLC0415"]
ignore = ["N806", "N802", "N803", "A001", "A002", "B905", "RUF"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-third-party = [
  "bio2zarr",
  "click",
  "msprime",
  "numpy",
  "pyfuse3",
  "pytest",
  "trio",
  "vcztools",
  "zarr",
]
